fixed vertical overflow

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace, "Raleway", sans-serif;
 }
+
+#root {
+  overflow: hidden;
+}
